Final_v1 Fixed a bug when clicking on the notification bar.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".GoodsDetail"
-            android:launchMode = "standard">
+            android:launchMode = "singleTask">
 
         </activity>
         <receiver android:name=".StaticReceiver"
